<resources>
    <string name="app_name">mycancercare</string>
    <string name="desc_cancer">Kanker adalah penyakit yang ditandai dengan pertumbuhan sel secara tidak terkendali, yang memiliki kemampuan untuk menyusup dan merusak sel-sel sehat di dalam tubuh.</string>
    <string name="apa_itu_kanker">Apa itu Kanker?</string>
    <string name="penyebab_kanker">Penyebab Kanker?</string>
    <string name="desc_penyebab">Penyebab utama kanker adalah mutasi DNA pada sel, sehingga sel memecah diri dengan kecepatan melebihi normal. Selain mutasi, penyebab kanker juga disebabkan oleh radiasi, asap rokok, virus, bahan kimia karsinogen dan hormon</string>
    <string name="faktor_risiko">Faktor Risiko?</string>
    <string name="faktorrisiko">Faktor risiko kanker melingkupi tingkat usia, riwayat keluarga, lingkungan,kondisi kesehatan kronis, infeksi dan gangguan sistem imun.</string>
    <string name="pelajarilebihlanjut">Ingin mempelajarinya lebih lanjut?</string>
    <string name="kenal_breast"><b>Apa itu Kanker Payudara?</b>\n\nKanker payudara adalah kondisi ketika sel kanker terbentuk di jaringan payudara. Kanker bisa terbentuk di kelenjar yang menghasilkan susu (lobulus), atau di saluran (duktus) yang membawa air susu dari kelenjar ke puting payudara.
        \n\nKanker juga bisa terbentuk di jaringan lemak atau jaringan ikat di dalam payudara. Kanker payudara terbentuk saat sel-sel di dalam payudara tumbuh tidak normal dan tidak terkendali. Sel tersebut umumnya membentuk tumor yang terasa seperti benjolan. Meski biasanya terjadi pada wanita, kanker payudara juga bisa menyerang pria.Kanker payudara yang paling umum terjadi, terbagi dalam beberapa jenis.
        \n\n<b>a. Ductal carcinoma in situ.</b>
        \nKanker ini tumbuh di duktus, dan tidak menyebar ke jaringan sekitarnya. Jenis kanker ini termasuk kanker stadium awal dan mudah diobati. Namun demikian, kanker ini bisa menyebar ke jaringan sekitarnya jika tidak segera ditangani.

</string>
    <string name="todo">TODO</string>
    <string name="lcis"><b>b. Lobular carcinoma in situ.</b>
        \nKanker ini tumbuh di bagian lobulus. Sama seperti ductal carcinoma in situ, kanker ini tidak menyebar ke jaringan sekitarnya.</string>
    <string name="idc"><b>c. Invasive ductal carcinoma.</b>
        \nKanker ini tumbuh di duktus dan bisa menyebar ke jaringan sekitarnya, bahkan bisa menyebar ke area tubuh yang lain. Jenis kanker ini terjadi pada 70–80% kasus kanker payudara.</string>
    <string name="ilc"><b>d. Invasive lobular carcinoma.</b>
        \nAdalah kanker yang tumbuh di lobulus dan bisa menyebar ke jaringan sekitarnya. Kanker ini terjadi pada 10% kasus kanker payudara.</string>
    <string name="bagaimanacegah"><b>Bagaimana cara mencegah kanker payudara?</b>
        \n\nCara ampuh untuk mencegah penyakit ini adalah dengan menghindari segala faktor risiko penyebabnya. Selain itu, mewaspadai gejala kanker payudara dengan deteksi dini juga langkah penting untuk mencegah penyakit ini. Berikut ini beberapa cara deteksi dini untuk mewaspadai gejala kanker payudara yang dapat Anda lakukan.
        \n\n <b>1. Periksa payudara sendiri</b></string>
    <string name="desc_sendiri">Langkah paling mudah untuk mengetahui gejala kanker payudara adalah dengan pemeriksaan payudara sendiri atau SADARI. Tujuannya untuk memeriksa benjolan pada payudara. Anda dapat melakukan pemeriksaan ini di rumah secara rutin. Pemeriksaan yang dilakukan secara rutin akan membantu Anda untuk mengenali tekstur jaringan payudara normal.
        \n\nWaktu terbaik untuk memeriksa payudara adalah beberapa hari setelah siklus menstruasi selesai. Karena perubahan hormon dapat mempengaruhi bentuk dan perasaan Anda terhadap payudara, pemeriksaan paling baik adalah ketika payudara Anda berada pada status yang normal.
    \n\n <b>2. Mammografi</b></string>
    <string name="desc_mamo">Selain melakukan SADARI, Anda dapat melakukan pemeriksaan mammografi secara rutin untuk mendeteksi ada tidaknya sel kanker di bagian payudara. Pemeriksaan ini penting dilakukan untuk mengetahui gejala kanker payudara awal. Mammografi sendiri adalah teknik pemindaian gambar menggunakan sinar rontgen dosis rendah untuk mendeteksi dan mendiagnosis kanker di payudara.
        \n\nKetika melakukan memmografi, payudara Anda akan ditempelkan pada layar pemindai rontgen. Kemudian, sebuah kompressor akan menekan payudara Anda ke bawah untuk meratakan jaringan agar menunjukkan gambar yang lebih jelas dari payudara Anda. Bagi Anda yang baru pertama kali melakukan prosedur ini, Anda mungkin akan sedikit merasakan nyeri atau tidak nyaman. Namun jangan khawatir, rasa nyeri dan tidak nyaman ini tidak akan bertahan lama.
    \n\n <b>3. Perubahan Gaya Hidup</b></string>
    <string name="desc_gayasehat">Beberapa perubahan gaya hidup yang dapat membantu mencegah kanker di payudara, yaitu:
        \n\n <b>a. Batasi konsumsi alkohol</b>
        \nKonsumsi alkohol tidak lebih dari satu gelas per hati. Lebih baik lagi, berhentilah mengonsumsi alkohol secara total.
        \n\n <b>b. Olahraga teratur</b>
        \nOlahraga intensitas sedang secara rutin setidaknya 30 menit setiap hari. Hal ini dapat dimulai dengan hanya sekadar jalan santai, bersepeda, jogging, dan lain sebagainya. Bila perlu, tanyakan pada dokter terkait olahraga yang sesuai dengan kondisi Anda.
        \n\n <b>c. Batasi terapi hormon pasca menopause</b>
        \nKombinasi terapi hormon dapat meningkatkan risiko terkena kanker di payudara. Itu sebabnya, bicarakan kembali dengan dokter Anda terkait manfaat serta risiko terapi hormon.
        \n\n <b>d. Berat badan sehat</b>
        \nBerusahalah untuk mendapatkan berat badan sehat dan ideal. Jika Anda perlu menurunkan banyak berat badan, tanyakan dokter tentang stretegi yang sehat untuk mencapai hal tersebut. Pada dasarnya kunci menurunkan berat badan hanya kurangi asupan kalori dan perbanyak olahraga. Diet sehat. Asupan makanan nyatanya juga berperan penting untuk mencegah kanker ini. Oleh sebab itu, perhatikanlah asupan makanan Anda sehari-hari. Konsumsilah makanan dengan gizi seimbang dari buah dan sayur serta hindari makanan yang mengandung lemak tinggi.</string>
    <string name="obat_desc"><b>Apa saja obat kanker payudara yang biasa digunakan?</b>
        \n\nDokter Anda menentukan terapi sebagai obat kanker payudara berdasarkan faktor-faktor berikut:
        \n- Tipe kanker di payudara
        \n- Stadium kanker di payudara
        \n- Ukuran kanker di payudara
        \n- Sensitivitas sel kanker terhadap hormon
        \n- Kondisi kesehatan Anda secara keseluruhan
        \n\nTerdapat 5 tipe terapi standar yang dapat dilakukan dokter sebagai obat kanker payudara, di antaranya:</string>
    <string name="obat2_desc">\n <b>1. Pembedahan</b>
        \n- Pembedahan Bedah konservatif, yaitu mengangkat sel kanker beserta kelenjar getah bening yang terlibat.
        \n- Mastektomi total, yaitu mengangkat seluruh payudara yang terkena kanker.
        \n- Modified radical mastectomy (mastektomi radikal yang dimodifikasi), yaitu mengangkat seluruh payudara yang terkena kanker, kelenjar getah bening di bawah ketiak, sepanjang otot pada dada, dan terkadang sebagian otot dinding dada.
        \n\n <b>2. Terapi radiasi</b>
        \nTerapi radiasi adalah terapi kanker dengan menggunakan sinar X bertenaga tinggi yang ditargetkan untuk membunuh sel kanker atau menghambat pertumbuhan sel kanker. Terapi ini umumnya dilakukan secara teratur bagi wanita yang berisiko tinggi setelah menjalani prosedur mastektomi.
        \n\n <b>3. Kemoterapi</b>
        \nKemoterapi, yaitu terapi kanker menggunakan obat-obatan untuk menghambat pertumbuhan sel kanker. Terapi ini dapat dilakukan sebelum pembedahan untuk mengecilkan tumor sebelum diangkat. Selain itu, terapi ini juga dapat dilakukan setelah pembedahan untuk mencegah pertumbuhan tumor kembali.</string>
    <string name="obat_des3">\n\n <b>4. Terapi hormon</b>
        \nTerapi hormon adalah terapi kanker dengan menghambat kerja hormon dan mencegah perkembangan sel kanker. Terapi ini efektif hanya pada kanker pada payudara yang sensitif terhadap hormon. Dokter Anda akan melakukan pemeriksaan untuk menentukan tipe kanker di payudara Anda.
        \n\n <b>5. Terapi target</b>
        \nTerapi target adalah terapi yang menggunakan obat-obatan atau bahan kimia lain untuk mengidentifikasi dan menyerang sel kanker secara spesifik tanpa membunuh sel-sel normal. Terapi ini antara lain:
        \n- Antibodi monoklonal
        \n- Penghambat tirosin kinase
        \n- Cyclin-dependent kinase inhibitors (penghambat cyclin-dependent kinase)
        \n\nTerapi yang digunakan dapat berupa kombinasi dari beberapa terapi. Konsultasikan dengan dokter Anda untuk pilihan terapi yang tepat untuk Anda.</string>
    <string name="bedah"><b>Pengobatan apa saja yang dapat dilakukan?</b>
        \n\nPengobatan terhadap kanker serviks meliputi bedah, kemoterapi, radioterapi, atau kombinasi ketiganya. Metode yang dipilih tergantung kepada beberapa faktor, yaitu stadium kanker, jenis kanker, serta kondisi kesehatan pasien. Sejumlah pengobatan yang dapat dilakukan pada kanker serviks meliputi:
        \n\n<b>1. Bedah</b></string>
    <string name="bedahdetail">Beberapa metode bedah dapat menangani kanker serviks, terutama pada stadium awal. Di antaranya adalah:
        \n\n <b>a. Konisasi atau biopsi kerucut</b>
        \nProsedur ini bertujuan mengangkat sel kanker menggunakan pisau bedah, laser, atau kawat tipis yang dialiri listrik (LEEP). Metode konisasi yang dipilih tergantung pada lokasi dan jenis kanker.
        \n\n <b>b. Histerektomi</b>
        \nHisterektomi adalah bedah untuk mengangkat rahim (uterus) dan leher rahim (serviks).
        \n\n <b>c. Trakelektomi radikal</b>
        \nBedah trakelektomi bertujuan mengangkat serviks, vagina bagian atas, serta kelenjar getah bening di area pinggul, melalui laparoskopi.
        \n\n<b>2. Radioterapi\n</b></string>
    <string name="radiotrapi">Radioterapi adalah metode pengobatan kanker yang menggunakan sinar radiasi tinggi untuk membunuh sel kanker.
        \n\n<b>3. Kemoterapi\n</b></string>
    <string name="detailkemo">Kemoterapi adalah metode pengobatan dengan memberikan pasien obat antikanker dalam bentuk obat minum atau suntik. Obat ini dapat memasuki aliran darah dan menyebar ke seluruh tubuh.</string>
    <string name="kemoblood1"><b>Pengobatan apa saja yang dapat dilakukan?</b>
        \n\nBerikut ini adalah metode pengobatan yang umumnya dianjurkan untuk menangani kanker darah, antara lain:
        \n\n<b>1. Kemoterapi</b></string>
    <string name="kemoblood2">Kemoterapi merupakan pilihan terapi paling umum untuk kasus kanker darah leukimia. Pengobatan kemoterapi menggunakan bahan-bahan kimia untuk membunuh sel-sel kanker darah.
        \n\n<b>2. Radioterapi</b></string>
    <string name="radi1">Teknik pengobatan ini menggunakan sinar X untuk menghancurkan dan menghambat pertumbuhan sel-sel kanker. Radioterapi dapat dilakukan hanya pada area tertentu yang terserang kanker, ataupun pada seluruh tubuh, bergantung dari kondisi Anda. Radioterapi juga dapat dilakukan untuk persiapan melakukan transplantasi sel induk.
        \n\n<b>3. Transplantasi sel induk atau stem cell</b></string>
    <string name="cell">Transplantasi sel induk atau stem cell untuk mengganti sumsum tulang yang sudah rusak dengan yang sehat. Sel-sel induk yang digunakan bisa berasal dari tubuh Anda sendiri atau tubuh orang lain sebagai pendonor. Kemoterapi atau radioterapi biasanya akan dilakukan sebagai langkah persiapan sebelum menjalani prosedur transplantasi ini.
        \n\n<b>4. Terapi terfokus untuk menyerang bagian-bagian rentan dalam sel-sel kanker</b>
        \n\n<b>5. Terapi biologis untuk membantu sistem kekebalan tubuh mengenali dan menyerang sel-sel kanker</b></string>
</resources>